Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.9
-
Fix Version/s: 10.1.11
-
Component/s: Authentication and Privilege System
-
Labels:None
-
Environment:Linux with parameters set:
plugin-load-add=simple_password_check.so
simple_password_check_other_characters=0
-
Sprint:10.1.11
Description
For statements:
CREATE USER 'usergoodmixed'@'%' IDENTIFIED BY 'Hi123456'; |
GRANT select ON performance_schema.users to 'usergoodmixed'@'%' |
I get error :
ERROR 1819 (HY000) at line 25 in file: 'password_complexity_test.sql': Your password does not satisfy the current policy requirements
|
on the grant statement.
I see a MySQL Bug:
https://bugs.mysql.com/bug.php?id=70451
Is this issue addressed with MariaDB?